--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -8,7 +8,6 @@
   align-items: center;
 
   padding: 1rem 1.5rem;
-  margin-bottom: 5px;
 
   background-color: #333;
   color: white;
@@ -20,8 +19,12 @@
   ul {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
 
     list-style: none;
+
+    li:hover {
+      cursor: pointer;
+    }
   }
 }
