--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -19,7 +19,7 @@
   ul {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
 
     list-style: none;
 
