--- a/src/App.css
+++ b/src/App.css
@@ -8,5 +8,35 @@
   background-color: #999;
   width: 100%;
   min-height: calc(100vh - 100px - 3rem);
-  text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.emptyContent {
+  width: 70%;
+  min-height: 500px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin: 2rem 0;
+}
+
+.content {
+  width: 100%;
+  min-height: 500px;
+
+  background-color: #ccc;
+
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
+}
+
+.linkStyle {
+  color: white;
+  text-decoration: none;
 }
