--- a/src/components/Search/style.scss
+++ b/src/components/Search/style.scss
@@ -1,8 +1,8 @@
 #searchInput {
-  width: 70%;
+  width: 100%;
   height: 2rem;
 
-  margin: 2rem 0;
+  margin-bottom: 2rem;
   padding: 0.5rem;
 
   outline: none;
