--- a/src/components/Register/style.scss
+++ b/src/components/Register/style.scss
@@ -1,19 +1,19 @@
 #register {
   width: 30vw;
-  min-height: 350px;
+  min-height: 300px;
 
   background-color: white;
 }
 
 .inputs {
   width: 100%;
-  min-height: 350px;
-  padding-bottom: 50px;
+  min-height: 250px;
+  padding-bottom: 20px;
 }
 
 .loginDownSection {
   width: 100%;
-  min-height: 70px;
+  height: 70px;
 
   background-color: white;
 
