--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,29 @@
   color: white;
   text-decoration: none;
 }
+
+.loginSection {
+  width: 30vw;
+  min-height: 300px;
+
+  background-color: white;
+}
+
+.inputs {
+  width: 100%;
+  min-height: 250px;
+  padding-bottom: 20px;
+}
+
+.loginDownSection {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+
+  width: 100%;
+  height: 70px;
+
+  background-color: white;
+
+  border-top: 1px solid blue;
+}
