--- a/src/components/FilmMinature/style.scss
+++ b/src/components/FilmMinature/style.scss
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: flex-start;
 
-  padding: 2rem 1rem;
+  padding: 2rem 3rem;
 
   border-bottom: 1px solid blue;
 }
@@ -18,7 +18,7 @@
 
   max-width: 60%;
 
-  padding-left: 1rem;
+  padding-left: 2rem;
 }
 
 .descriptionLabel {
@@ -26,5 +26,5 @@
 }
 
 .descriptionLine {
-  margin-bottom: 5px;
+  margin-block: 7px;
 }
