changed logic in switching to movie description

--- a/src/components/Movie/style.scss
+++ b/src/components/Movie/style.scss
@@ -8,6 +8,10 @@
   padding: 2rem 3rem;
 }
 
+.commentsSection {
+  padding: 0rem 3rem;
+}
+
 .centeredVideo {
   display: flex;
   align-items: center;
