--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -6,12 +6,30 @@
   margin: 1rem 2rem;
 
   color: black;
+
+  border: none;
 }
 
 .red {
-  background-color: red;
+  background-color: #dc3545;
+}
+
+.red:hover {
+  background-color: #cb2434;
 }
 
 .blue {
   background-color: #0d6efd;
+}
+
+.blue:hover {
+  background-color: #0c5dec;
+}
+
+.green {
+  background-color: #198754;
+}
+
+.green:hover {
+  background-color: #087643;
 }
