--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,8 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  align-items: center;
+  gap: 1rem;
 
   width: 100%;
   height: 70px;
